# OpenGLRayTracer

./: OpenGLRayTracer.sln  README.md  basic.stl
OpenGLRayTracer/: OpenGLRayTracer.vcxproj  OpenGLRayTracer.vcxproj.filters
OpenGLRayTracer/res/shaders/: Basic.shader  fragment.glsl  rayTrace.frag  screen.frag  vertex.glsl
OpenGLRayTracer/src/: CMakeLists.txt  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Sphere.h  World.cpp  World.h  main.cpp  shaderBackup.h  stl_reader.h
